[project]
name = "ai-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.1",
    "pypdf>=6.12.1",
    "rich>=15.0.0",
]
